--- a/src/data_preprocessor.ipynb
+++ b/src/data_preprocessor.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,8 @@
     "import os\n",
     "import json\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import yfinance"
    ]
   },
   {
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +39,8 @@
      "output_type": "stream",
      "text": [
       "../data already exists.\n",
-      "Not from my analytical standpoint, it aint. It might drop $5 at some point in the near future, but it'll bounce back, it's on a very strong positive trend\n"
+      "{'time': 1535842940.0, 'submission_id': '9c7fgn', 'comment_id': 'e58klkx', 'body': 'This will literally be the longest 3 days of my life.', 'score': 649, 'num_replies': 3, 'is_root': 1, 'submission_score': 7153, 'submission_ratio': 0.09073116175031455, 'submission_title': 'When the stock market is closed', 'submission_text': '[deleted]', 'parent_text': 'When the stock market is closed [deleted]', 'parent_score': 7153, 'parent_ratio': 0.09073116175031455}\n",
+      "Awesome, thank you! 🙌🙌\n"
      ]
     }
    ],
@@ -57,8 +59,66 @@
     "    \n",
     "    return json_dict\n",
     "\n",
-    "test_data = extract_json(\"../data/2018-09-01.json\")\n",
+    "test_data = extract_json(\"../data/test/2018-09-01.json\")\n",
+    "print(test_data[0])\n",
     "print(test_data[np.random.randint(len(test_data))]['body'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before we can clean up our text, we need to define a function to grab the ticker of a post. If the ticker does not exist, the post is probably not relevant since we have no way to correlate a post with a specific stock. After confirming a valid ticker in a post, we have to define a function that will clean up the body of our text."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You\n"
+     ]
+    }
+   ],
+   "source": [
+    "rand_val = np.random.randint(len(test_data))\n",
+    "text = test_data[rand_val]\n",
+    "\n",
+    "def get_ticker(raw : dict):\n",
+    "    \"\"\"Returns a ticker if it exists, else returns none\"\"\"\n",
+    "    # Check title for ticker first\n",
+    "    title = raw['submission_title'].split(' ')\n",
+    "    for word in title:\n",
+    "        if (is_valid_ticker(word)):\n",
+    "            # If something is a valid ticker, return the ticker\n",
+    "            return word\n",
+    "\n",
+    "    # Check body for ticker\n",
+    "    body = raw['body'].split(' ')\n",
+    "    for word in body:\n",
+    "        if (is_valid_ticker(word)):\n",
+    "            # If something is a valid ticker, return the ticker\n",
+    "            return word\n",
+    "    \n",
+    "    # Return None otherwise\n",
+    "    return None\n",
+    "\n",
+    "def is_valid_ticker(word):\n",
+    "    \"\"\"Returns boolean if ticker is valid or not\"\"\"\n",
+    "    ticker = yfinance.Ticker(word)\n",
+    "    \n",
+    "    # If there is no regularMarketPrice, there is definitely not a ticker\n",
+    "    if ticker.info['regularMarketPrice'] == None:\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True\n",
+    "\n",
+    "# Test code\n",
+    "print(get_ticker(text))"
    ]
   },
   {
