Defined get_ sentimental_score function

--- a/src/data_preprocessor.ipynb
+++ b/src/data_preprocessor.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,8 @@
     "import json\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import yfinance"
+    "import yfinance\n",
+    "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer"
    ]
   },
   {
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +41,7 @@
      "text": [
       "../data already exists.\n",
       "{'time': 1535842940.0, 'submission_id': '9c7fgn', 'comment_id': 'e58klkx', 'body': 'This will literally be the longest 3 days of my life.', 'score': 649, 'num_replies': 3, 'is_root': 1, 'submission_score': 7153, 'submission_ratio': 0.09073116175031455, 'submission_title': 'When the stock market is closed', 'submission_text': '[deleted]', 'parent_text': 'When the stock market is closed [deleted]', 'parent_score': 7153, 'parent_ratio': 0.09073116175031455}\n",
-      "Awesome, thank you! 🙌🙌\n"
+      "get a new girl fam \n"
      ]
     }
    ],
@@ -73,14 +74,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You\n"
+      "give\n"
      ]
     }
    ],
@@ -119,6 +120,32 @@
     "\n",
     "# Test code\n",
     "print(get_ticker(text))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPRO Hero 7 Black confirmed? Demo leaked at BBY. Buy calls with your life savings {'neg': 0.122, 'neu': 0.688, 'pos': 0.19, 'compound': 0.3182}\n",
+      "I just looked back to last year and the run up prior to the announcement was insane. Volume was up almost 1000% and share price increased over 25%. This is solid DD and I’m buying calls Tuesday cause this could be awesome.  {'neg': 0.055, 'neu': 0.748, 'pos': 0.197, 'compound': 0.7216}\n"
+     ]
+    }
+   ],
+   "source": [
+    "rand_index = np.random.randint(len(test_data))\n",
+    "text = test_data[rand_index]\n",
+    "text_title = text['submission_title']\n",
+    "text_body = text['body']\n",
+    "analyzer = SentimentIntensityAnalyzer()\n",
+    "score_title = analyzer.polarity_scores(text_title)\n",
+    "score_body = analyzer.polarity_scores(text_body)\n",
+    "print(f\"{text_title} {str(score_title)}\")\n",
+    "print(f\"{text_body} {str(score_body)}\")"
    ]
   },
   {
