--- a/src/data_preprocessor.ipynb
+++ b/src/data_preprocessor.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "# Data Preprocessing\n",
     "Once we have extracted our JSON files with our webcrawler, we now want to preprocess the data to 1) extract the ticker label, if available, and 2) generate a \"sentimental\" score from the cleaned text."
@@ -11,7 +13,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# Import dependencies\n",
@@ -25,7 +29,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "We will now define some functions that will extract the relevant data from the JSON and clean it up."
    ]
@@ -33,7 +39,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -67,7 +75,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "Before we can clean up our text, we need to define a function to grab the ticker of a post. If the ticker does not exist, the post is probably not relevant since we have no way to correlate a post with a specific stock. After confirming a valid ticker in a post, we have to define a function that will clean up the body of our text."
    ]
@@ -75,7 +85,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -125,7 +137,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -151,7 +165,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": []
   }
@@ -161,8 +177,20 @@
    "hash": "a3a41ee9909c3927daab64c1548d963ca2ce4212e6d1da01c6ae3fe875d7bb01"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.12 64-bit ('base': conda)",
+   "argv": [
+    "/usr/bin/python3",
+    "-m",
+    "ipykernel_launcher",
+    "-f",
+    "{connection_file}"
+   ],
+   "display_name": "Python 3 (ipykernel)",
+   "env": null,
+   "interrupt_mode": "signal",
    "language": "python",
+   "metadata": {
+    "debugger": true
+   },
    "name": "python3"
   },
   "language_info": {
@@ -177,7 +205,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.8.12"
   },
-  "orig_nbformat": 4
+  "name": "data_preprocessor.ipynb"
  },
  "nbformat": 4,
  "nbformat_minor": 2
