--- a/src/data_preprocessor.ipynb
+++ b/src/data_preprocessor.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,8 @@
     "import json\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import yfinance"
+    "import yfinance\n",
+    "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer"
    ]
   },
   {
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +41,7 @@
      "text": [
       "../data already exists.\n",
       "{'time': 1535842940.0, 'submission_id': '9c7fgn', 'comment_id': 'e58klkx', 'body': 'This will literally be the longest 3 days of my life.', 'score': 649, 'num_replies': 3, 'is_root': 1, 'submission_score': 7153, 'submission_ratio': 0.09073116175031455, 'submission_title': 'When the stock market is closed', 'submission_text': '[deleted]', 'parent_text': 'When the stock market is closed [deleted]', 'parent_score': 7153, 'parent_ratio': 0.09073116175031455}\n",
-      "Awesome, thank you! 🙌🙌\n"
+      "I promise you, you will lose it if you continue to do what you did man. Huge congrats, but do 6 month/leap calls and take it easy.\n"
      ]
     }
    ],
@@ -73,17 +74,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rand_val = np.random.randint(len(test_data))\n",
     "text = test_data[rand_val]\n",
@@ -118,15 +111,100 @@
     "        return True\n",
     "\n",
     "# Test code\n",
-    "print(get_ticker(text))"
+    "# print(get_ticker(text))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most Anticipated Earnings Releases for the week beginning September 3, 2018 {'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0}\n",
+      "GameStop? Puts? {'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "rand_index = np.random.randint(len(test_data))\n",
+    "text = test_data[rand_index]\n",
+    "text_title = text['submission_title']\n",
+    "text_body = text['body']\n",
+    "analyzer = SentimentIntensityAnalyzer()\n",
+    "score_title = analyzer.polarity_scores(text_title)\n",
+    "score_body = analyzer.polarity_scores(text_body)\n",
+    "print(f\"{text_title} {str(score_title)}\")\n",
+    "print(f\"{text_body} {str(score_body)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_sentimental_score(text):\n",
+    "    \"\"\"Returns a sentimental score given a string of text using VaderSentimentalAnalysis\"\"\"\n",
+    "    analyzer = SentimentIntensityAnalyzer()\n",
+    "    score = analyzer.polarity_scores(text)\n",
+    "    return score\n",
+    "\n",
+    "get_sentimental_score(text_title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Text: I am SO happy!\tScore: {'neg': 0.0, 'neu': 0.335, 'pos': 0.665, 'compound': 0.7875}\n",
+      "Text: i am so happy\tScore: {'neg': 0.0, 'neu': 0.388, 'pos': 0.612, 'compound': 0.6948}\n"
+     ]
+    }
+   ],
+   "source": [
+    "baseline_text = \"I am SO happy!\"\n",
+    "processed_text = \"i am so happy\"\n",
+    "\n",
+    "print(f\"Text: {baseline_text}\\tScore: {get_sentimental_score(baseline_text)}\")\n",
+    "print(f\"Text: {processed_text}\\tScore: {get_sentimental_score(processed_text)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Text: $MSFT to buy back $60 BILLION in shares and increase dividend 11%\tScore: {'neg': 0.0, 'neu': 0.69, 'pos': 0.31, 'compound': 0.5423}\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"$MSFT to buy back $60 BILLION in shares and increase dividend 11%\"\n",
+    "print(f\"Text: {text}\\tScore: {get_sentimental_score(text)}\")"
+   ]
   }
  ],
  "metadata": {
